# BertRanking

./: .gitignore  README.md  pyproject.toml
data/raw/usp_controlled_vocabulary/: vocabulario_usp.xml
notebooks/: bert_modeling_unsupervised.ipynb  fapesp_projects.ipynb  multiclass_classification_topic_modeling.ipynb  open_alex.ipynb  topic_modeling.ipynb  topic_modeling_supervised_fine_tuning.ipynb  topic_modeling_unsupervised_fine_tuning.ipynb
src/etl/: abstracts_med.py  usp_controlled_vocabulary.py
src/nlp_pipeline/: bert.py  bertranking.py
