[tool.poetry]
name = "bert-ranking"
version = "0.1.0"
description = "BertRanking is a system that allows the ranking of articles based on the semantic similarity between a query article and the articles in the database."
authors = ["Claudiomar Mendes de Moura Souza <claudio356@live.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pandas = "^2.2.2"
numpy = "^1.26.4"
transformers = {extras = ["torch"], version = "^4.41.2"}
torch = "^2.3.0"
tokenizers = "^0.19.1"
scikit-learn = "^1.5.0"
plotly = "^5.22.0"
datasets = "^2.19.2"
xlsx2csv = "^0.8.2"
wordcloud = "^1.9.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
